--- a/qlogger.ui
+++ b/qlogger.ui
@@ -378,6 +378,54 @@
       </layout>
      </widget>
     </item>
+    <item alignment="Qt::AlignHCenter">
+     <widget class="QWidget" name="widget" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <property name="spacing">
+        <number>5</number>
+       </property>
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Fila de estações</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>| Boca ativa =</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="ativa">
+         <property name="text">
+          <string>-</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item>
      <widget class="QGroupBox" name="infoFila">
       <property name="sizePolicy">
@@ -390,7 +438,7 @@
        <bool>false</bool>
       </property>
       <property name="title">
-       <string>Fila de Estações | Ativa = -</string>
+       <string/>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
