--- a/qlogger.ui
+++ b/qlogger.ui
@@ -1568,6 +1568,15 @@ padding: 4px</string>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="text">
              <string>Enviar </string>
             </property>
